--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react": "16.4.0",
     "@types/react-css-modules": "^4.6.2",
     "@types/react-dom": "16.0.4",
-    "@types/react-redux": "^4.4.46",
+    "@types/react-redux": "^4.4.47",
     "@types/react-router": "4.0.26",
     "@types/react-router-dom": "^4.2.7",
     "@types/webpack": "4.4.0",
@@ -66,6 +66,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "dotenv": "^6.2.0",
     "google-places-web": "^0.1.10",
     "react": "^16.4.0",
     "react-css-modules": "^4.7.8",
