--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "dotenv": "^6.2.0",
+    "google-map-react": "^1.1.2",
     "google-places-web": "^0.1.10",
     "react": "^16.4.0",
     "react-css-modules": "^4.7.8",
