Overwriting uneccessary code

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@types/classnames": "2.2.4",
     "@types/core-js": "2.5.0",
     "@types/jest": "^21.1.10",
-    "@types/node": "10.3.2",
-    "@types/react": "16.4.0",
+    "@types/node": "^10.3.2",
+    "@types/react": "16.9.32",
     "@types/react-css-modules": "^4.6.2",
     "@types/react-dom": "16.0.4",
     "@types/react-redux": "^4.4.47",
@@ -42,6 +42,7 @@
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.6",
@@ -65,12 +66,16 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.9",
     "dotenv": "^6.2.0",
     "google-map-react": "^1.1.2",
     "google-places-web": "^0.1.10",
-    "react": "^16.4.0",
+    "leaflet": "^1.6.0",
+    "react": "^16.13.1",
     "react-css-modules": "^4.7.8",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.13.1",
+    "react-leaflet": "^2.6.3",
+    "react-leaflet-heatmap-layer": "^2.0.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
