--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,19 +4,21 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "module": "commonjs",
-    "target": "es5",
+    "target": "ESNext",
     "jsx": "preserve",
     "allowJs": true,
     "lib": [
       "es6",
       "es7",
-      "dom"
+      "dom",
+      "es2017"
     ],
     "types": [
       "jest",
       "core-js",
       "react-css-modules"
-    ]
+    ],
+    "resolveJsonModule": true
   },
   "include": [
     "./src/**/*",
